[package]
name = "make-stuff-appear"
version = "0.1.0"
authors = ["Eric Douglass <dougli1sqrd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.111.0"
# pistoncore-input = "1.0.0"
conrod_core = { git = "https://github.com/pistondevelopers/conrod" }
conrod_piston = { git = "https://github.com/pistondevelopers/conrod" }
find_folder = "0.3.0"
specs = "0.16.1"
specs-derive = "0.4.1"
